--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,9 @@ h3, h2 {
   font-size: 3.5rem;
   margin-bottom: 2.5%;
 }
+.pulse {
+  animation: pulse 1.8s infinite;
+}
 
 @keyframes pulse {
 
@@ -83,6 +86,35 @@ h3, h2 {
   }
   100% {transform: scale(.9);
   }
+}
+.mobile {
+  display: none;
+}
+#play-btn {
+  margin: 50px auto;
+  padding: 10px 20px;
+  width: 50px;
+  border: 2px solid #FEF2BF;
+  border-radius: 100%;
+  font-family: cursive;
+  color: #FEF2BF;
+  transition: .1s;
+}
+#play-btn:hover {
+  font-size: 1.2rem;
+  /* padding: 20px 70px; */
+  transition: .3s;
+}
+
+@media screen and (max-width:768px) {
+
+  .mobile {
+    display: block;
+  }
+  .hide {
+    display: none;
+  }
+
 }
 .red {
   background-color: red;
